Add hover effect to gallery

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <button class="chip" data-filter="wedding">Weddings</button>
         <button class="chip" data-filter="birthday">Birthdays</button>
         <button class="chip" data-filter="get-together">Get‑togethers</button>
-        <button class="chip" data-filter="other">Other</button>
+        <button class="chip" data-filter="other">Others</button>
       </div>
 
       <div id="eventsGrid" class="cards-grid">
@@ -97,23 +97,42 @@
     </div>
   </section>
 
-  <!-- Gallery -->
-  <section id="gallery" class="section">
-    <div class="container">
-      <div class="section-header">
-        <h2>Gallery</h2>
-        <p>Moments that matter—captured in white and blue.</p>
+<!-- Gallery -->
+<section id="gallery" class="section">
+  <div class="container">
+    <div class="section-header">
+      <h2>Gallery</h2>
+      <p>Moments that matter—captured in white and blue.</p>
+    </div>
+    <div class="gallery-grid">
+      <!-- Most recent wedding -->
+      <div class="gallery-item">
+        <img src="Images/Ijeoma&Ugo.jpg" alt="Most recent wedding celebration" />
       </div>
-      <div class="gallery-grid">
-        <div class="gallery-item"></div>
-        <div class="gallery-item"></div>
-        <div class="gallery-item"></div>
-        <div class="gallery-item"></div>
-        <div class="gallery-item"></div>
-        <div class="gallery-item"></div>
+      
+      <!-- Election handover pictures -->
+      <div class="gallery-item">
+        <img src="Images/Incoming&Outgoing.jpeg" alt="Incoming & Outgoing President" class="special-fit" />
+      </div>
+      <div class="gallery-item">
+        <img src="Images/Handover-pix.jpg" alt="Election handover event" />
+      </div>
+      
+      <!-- Additional weddings -->
+      <div class="gallery-item">
+        <img src="Images/Chimnonso&Ebuka.jpeg" alt="Wedding couple 2" />
+      </div>
+      <div class="gallery-item">
+        <img src="Images/Divine&Martins.jpg" alt="Wedding couple 3" />
+      </div>
+      <div class="gallery-item">
+        <img src="Images/Adeola&Marvelous.jpg" alt="Wedding couple 4" />
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+
 
   <!-- Financials -->
   <section id="financials" class="section section-alt">
